# Callisto

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  api_server.py  config.example.yaml  config.py  pyproject.toml
backend/services/audio_processing/: gpt_sovits_service.py  kws_service.py  silero_vad_service.py  stt_service.py
backend/services/core/: voice_chat_service.py
backend/services/llm/: llm_factory.py  tool_calling_handler.py  tools.py
backend/services/memory/: embedding_service.py  forgetting.py  memory_cache.py  memory_writer.py  retrieval.py  sql.py  vector_store.py
backend/services/monitoring/: audio_monitor_service.py  voice_monitor_websocket_service.py
backend/services/tts/: base_tts.py  edge_tts_service.py  gpt_sovits_service.py  tts_factory.py
backend/services/visual/: avatar_controller.py  vmm_service.py
docs/: Backend README.md
docs/specs/: SPEC-agc-audio-normalization.md  SPEC-alltalk-tts-streaming.md  SPEC-button-recording-with-vad.md  SPEC-code-improvements.md  SPEC-doc-maintenance.md  SPEC-memory-layer-integration.md  SPEC-monitor-mode-ui-update.md  SPEC-provider-abstraction.md  SPEC-realtime-ui-update.md  SPEC-refactor-voice-chat-service.md  SPEC-stt-voice-input.md  SPEC-tts-non-blocking-queue.md  SPEC-update-backend-readme.md  SPEC-voice-chat-frontend.md  SPEC-voice-monitor-service-extraction.md  SPEC-voice-wake-word-backend.md  SPEC-voice-wake-word-frontend.md  SPEC-voice-wake-word-overview.md  SPEC-wake-word-acknowledgment.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml
(+14 files in other folders)
